[package]
name = "wxbuild-rs"
version = "1.1.0"
authors = ["Sergej Jurecko <sergej.jurecko@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["gui", "ui"]
categories    = ["gui"]
description = "Compile your wxWidgets c++ code and link with wxWidgets in build.rs files."
repository = "https://github.com/SergejJurecko/wxbuild-rs"
documentation = "https://docs.rs/wxbuild-rs"

[dependencies]
cc = {version = "1"} # features = ["parallel"]

